--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,7 +34,7 @@ bind m set -g mouse \; display-message "Mouse: #{?mouse,on,off}"
 unbind r
 bind r source-file ~/.tmux.conf
 
-# set -g prefix C-s
+set -g prefix C-a
 
 # act like vim
 setw -g mode-keys vi
